<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        tools:context=".shoe.screens.ShoeDetailFragment"
        android:padding="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/src_shoe_detail_txt_shoe_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_shoe_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/src_shoe_detail_hnt_shoe_name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/src_shoe_detail_txt_shoe_company_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/src_shoe_detail_hnt_shoe_company_name"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/src_shoe_detail_txt_shoe_size"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/src_shoe_detail_hnt_shoe_size"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/src_shoe_detail_txt_shoe_description"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/txt_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/src_shoe_detail_hnt_shoe_description"
                android:inputType="textMultiLine" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_weight="1">

            <Button
                android:id="@+id/cancelButton"
                style="@style/std_button"
                android:text="@string/src_shoe_detail_bnt_cancel" />

            <Button
                android:id="@+id/saveButton"
                style="@style/std_button"
                android:text="@string/src_shoe_detail_bnt_save" />

        </LinearLayout>


    </LinearLayout>
</layout>